<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:gravity="top|center">


    <TextView
        android:text="@string/person_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/action"
        android:gravity="center" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="horizontal"

        android:layout_marginTop="@dimen/button_size"
        android:gravity="top|left">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title"
            android:layout_marginRight="@dimen/place"
            android:layout_marginLeft="@dimen/place"
            android:text="@string/person_contract" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPersonContract"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/button_size"
            android:text="Contract" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="horizontal"

        android:layout_marginTop="@dimen/button_size"
        android:gravity="top|left">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title"
            android:layout_marginRight="@dimen/place"
            android:layout_marginLeft="@dimen/place"
            android:text="@string/person_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPersonName"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/button_size"
            android:text="Name" />

    </LinearLayout>


    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="horizontal"
        android:gravity="top|center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/buttonBack"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/button_size"
            android:padding="@dimen/button_padding"
            android:layout_margin="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/buttonNext"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/button_size"
            android:padding="@dimen/button_padding"
            android:layout_margin="30dp"

            />


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print"
        android:id="@+id/buttonConfirmPrint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="30dp"/>


</LinearLayout>
