<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:gravity="top|center"
    >



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="horizontal"
        android:gravity="top"
        android:id="@+id/menuOptions"
        android:layout_gravity="right">


        <LinearLayout
            android:id="@+id/langEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/border"
            android:padding="@dimen/icon_padding"
            android:orientation="horizontal"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/list_item_padding"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="EN"
                android:textSize="@dimen/action"  />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/langRU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/border"
            android:padding="@dimen/icon_padding"
            android:orientation="horizontal"
            android:clickable="true"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/list_item_padding"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ru" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="RU"
                android:textSize="@dimen/action"  />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/icon_padding"
            android:orientation="horizontal"
            android:clickable="false"
            android:layout_gravity="right"
            android:gravity="end">

            <ImageView
                android:id="@+id/buttonOptions"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/list_item_padding"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/gear" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:text="@string/enter_contract_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/action" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/person_contract"
        android:textSize="@dimen/button_size"
        android:numeric="integer"
        android:inputType="number"
        android:maxLength="8"
        android:gravity="center" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="horizontal"
        android:gravity="top|center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonBack"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonNext"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="30dp"

        />


    </LinearLayout>

</LinearLayout>
